[gd_scene load_steps=12 format=3 uid="uid://cic826u1jbdok"]

[ext_resource type="Script" path="res://door.gd" id="1_j6diy"]
[ext_resource type="PackedScene" uid="uid://e2oq4o4a3060" path="res://IT/ROOMS/door.glb" id="2_ole3j"]
[ext_resource type="AudioStream" uid="uid://bhv4snm8nvvs6" path="res://data/door-creak-02-79920.mp3" id="2_oleih"]
[ext_resource type="Texture2D" uid="uid://cxslbm604egag" path="res://IT/ROOM_SAMPLE_2_Metal038_2K_Color.png" id="3_goxs3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q3syx"]
size = Vector3(1.58009, 1.9, 1.27661)

[sub_resource type="Animation" id="Animation_cp8xo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ubgmd"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.39626, 0), Vector3(0, 1.22173, 0), Vector3(0, 0.872665, 0), Vector3(0, 0.698132, 0), Vector3(0, 0.610865, 0), Vector3(0, 0.523599, 0), Vector3(0, 0.488692, 0), Vector3(0, 0.349066, 0), Vector3(0, 0.174533, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3o448"]
resource_name = "door_open"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.0261799, 0), Vector3(0, 0.174533, 0), Vector3(0, 0.261799, 0), Vector3(0, 0.279253, 0), Vector3(0, 0.349066, 0), Vector3(0, 0.523599, 0), Vector3(0, 0.698132, 0), Vector3(0, 1.0472, 0), Vector3(0, 1.39626, 0), Vector3(0, 1.48353, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxyou"]
_data = {
"RESET": SubResource("Animation_cp8xo"),
"close": SubResource("Animation_ubgmd"),
"door_open": SubResource("Animation_3o448")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dph56"]
albedo_texture = ExtResource("3_goxs3")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_kxbyk"]
data = PackedVector3Array(1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 0.1217, 1, 1, -1, 1, -1, -1, 1, 0.6461, 0.1217, 1, 1, 0.1217, 1, 0.1994, 0.1217, 1, -1, -1, 1, -1, 1, 1, 0.6461, 0.1217, 1, -1, -1, 1, 0.1994, 0.1217, 1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, 1, 0.1217, 1, 1, 0.1217, -1, 1, -1, -1, 1, -1, 1, 1, 0.1217, 1, -1, -1, -1, 0.1994, 0.1217, -1, -1, 1, -1, -1, -1, -1, 0.6461, 0.1217, -1, 0.1994, 0.1217, -1, 1, 0.1217, 1, 1, 1, -1, 1, 0.1217, -1, 1, 0.1217, 1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 0.1994, 0.7509, 1, 0.1994, 0.1217, 1, 0.6461, 0.7509, 1, 1, 0.1217, 1, 0.6461, 0.1217, 1, -1, 1, 1, 0.6461, 0.7509, 1, 0.1994, 0.7509, 1, 0.6461, 0.7509, 1, 1, 1, 1, 1, 0.1217, 1, -1, 1, 1, 1, 1, 1, 0.6461, 0.7509, 1, 0.1994, 0.7509, -1, -1, 1, -1, 0.1994, 0.1217, -1, 1, 1, -1, 0.6461, 0.1217, -1, 1, 0.1217, -1, 0.6461, 0.7509, -1, -1, 1, -1, 0.1994, 0.7509, -1, 1, 1, -1, 0.6461, 0.7509, -1, 0.6461, 0.1217, -1, 0.6461, 0.7509, -1, 1, 1, -1, -1, 1, -1, 1, 0.1217, -1, -1, -1, -1, 1, -1, -1, 1, 0.1217, -1, 0.6461, 0.1217, -1, -1, -1, -1, 0.6461, 0.7509, 1, 0.1994, 0.7509, -0.9977, 0.1994, 0.7509, 1, 0.6461, 0.7509, 1, 0.6461, 0.7509, -0.9977, 0.1994, 0.7509, -0.9977, 0.1994, 0.1217, 1, 0.6461, 0.1217, -0.9977, 0.6461, 0.1217, 1, 0.1994, 0.1217, 1, 0.1994, 0.1217, -0.9977, 0.6461, 0.1217, -0.9977, 0.6461, 0.1217, 1, 0.6461, 0.7509, -0.9977, 0.6461, 0.7509, 1, 0.6461, 0.1217, 1, 0.6461, 0.1217, -0.9977, 0.6461, 0.7509, -0.9977, 0.1994, 0.7509, 1, 0.1994, 0.1217, -0.9977, 0.1994, 0.1217, 1, 0.1994, 0.7509, 1, 0.1994, 0.7509, -0.9977, 0.1994, 0.1217, -0.9977)

[node name="Node3D" type="Node3D" groups=["doors"]]
script = ExtResource("1_j6diy")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.25, -0.178535, 1, -0.567931)
shape = SubResource("BoxShape3D_q3syx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../door")
libraries = {
"": SubResource("AnimationLibrary_rxyou")
}

[node name="door" type="Node3D" parent="." groups=["doors"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0150648)

[node name="door2" parent="door" instance=ExtResource("2_ole3j")]
transform = Transform3D(-3.0598e-08, 0, 1, 0, 0.4675, 0, -0.7, 0, -4.37114e-08, 0.0701153, 1, -0.624758)

[node name="Cube" parent="door/door2" index="0"]
material_override = SubResource("StandardMaterial3D_dph56")

[node name="StaticBody3D" type="StaticBody3D" parent="door/door2/Cube" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="door/door2/Cube/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_kxbyk")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="door_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_oleih")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="door/door2"]
